--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
     </footer>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./app.js"></script>
+    
+    <!-- <script src="./app.js"></script> -->
+    <script src="./app2.js"></script>
 </body>
 </html>
 
