--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- <script src="./app.js"></script> -->
-    <script src="./app2.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
 
